--- a/static/index.html
+++ b/static/index.html
@@ -6,18 +6,13 @@
   <link id="theme-style" rel="stylesheet" href="/static/themes/cloudy.css">
 </head>
 <body>
-      <div>
-      <h1>Avinash XChowdhury</h1>
-    </div>
-    <div>
-        <p>Country: {{.Country}}</p>
-        <p>Region: {{.RegionName}}</p>
-        <p>Timezone: {{.Timezone}}</p>
-    </div>
+  <h1>🌍 Location Info</h1>
+  <p>Country: {{ .Location.Country }}</p>
+  <p>Region: {{ .Location.RegionName }}</p>
+  <p>Timezone: {{ .Location.Timezone }}</p>
 
-  <script>
-    // Will be replaced later by real logic to update theme
-  </script>
+  <h2 class="text-2xl font-bold">Weather: {{ .Weather.Description }}</h2>
+
 </body>
 </html>
 
